# Department-Microservices

./: README.md  config_file.py  main.py  pyproject.toml  requirements.txt
backend/: models.py
backend/services/: background_service.py
backend/utility/: api_client.py
